--- a/assets/style/Programme.css
+++ b/assets/style/Programme.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -45,7 +43,7 @@ nav {
     align-items: center;
     background-color: white;
     padding: 10px;
-    box-shadow: 1px 2px 20px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 2px 20px 10px rgba(0, 0, 0, 0.4);
 }
 
 nav img {
@@ -152,16 +150,17 @@ header span {
 }
 
 header h1 {
-    font-size: 1.2em;
+    font-size: 1.5em;
+    margin: 0 2em;
 }
 
 header p {
     font-size: 14px;
+    margin: 0 2em;
 }
 
 .container {
-    margin-top: 4em;
-    margin-left: 2em;
+    margin: 4em 2em;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -192,9 +191,8 @@ header p {
 
 .container .program-details .descriptiv-text p {
     margin-top: 2em;
-    margin-left: 1em;
-    padding-left: 2em;
-    font-size: 1em;
+    margin-left: 2.5em;
+    font-size: 14px;
 }
 
 .container .program-details img {
@@ -273,7 +271,7 @@ header p {
         gap: 0;
         border-radius: 1em;
         align-items: center;
-        width: 400px;
+        width: 100vw;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         cursor: pointer;
@@ -286,69 +284,28 @@ header p {
 
     .container .program-details .descriptiv-text {
         border: none;
-        width: 400px;
-        padding-right: 6em;
-        height: 12em;
     }
 
     .container .program-details .descriptiv-text h2 {
-        margin: .5em 0;
-        width: 400px;
+        margin: 1em 0;
         font-size: 1.2em;
         padding-right: 4em;
     }
 
     .container .program-details .descriptiv-text p {
-        width: 400px;
-        padding-right: 4em;
-        padding-bottom: 1em;
         font-size: 1em;
+        margin: 0;
     }
 
     .container .program-details img {
-        width: 400px;
-        height: 250px;
         object-fit: cover;
         border-radius: 1em 1em 0 0;
     }
 
     .container .program-details h1 {
         font-size: 1.2em;
-        width: 300px;
+        width: 70vw;
         margin-bottom: 1.5em;
         text-align: center;
     }
-}
-
-
-@media (max-width: 500px) {
-    .container .program-details {
-        width: 250px;
-    }
-
-    .container .program-details .descriptiv-text {
-        width: 250px;
-        padding-right: 6em;
-        height: 12em;
-    }
-
-    .container .program-details .descriptiv-text h2 {
-        width: 250px;
-        font-size: 1em;
-        padding: 0;
-    }
-
-    .container .program-details .descriptiv-text p {
-        width: 250px;
-        font-size: 0.8em;
-        padding: 0;
-    }
-
-    .container .program-details img {
-        width: 250px;
-        height: 100px;
-        object-fit: cover;
-        border-radius: 1em 1em 0 0;
-    }
-
 }
