--- a/assets/style/activite.css
+++ b/assets/style/activite.css
@@ -121,6 +121,33 @@ h1::before {
     border: 2px solid var(--orange);
 }
 
+
+
+.footer {
+    height: 40vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer_heading {
+    color: white;
+    font-weight: 600;
+
+}
+
+.footer_item {
+    font-weight: 100;
+    color: white;
+}
+
+
+footer ul li {
+    margin: 1em 0;
+}
+
 /* ===== MEDIA QUERIES ===== */
 
 /* Mobile-first */
@@ -164,6 +191,35 @@ h1::before {
         width: 90%;
         height: auto;
     }
+
+    .footer {
+        margin-top: 50em;
+        width: 100%;
+    }
+
+    .footer_title {
+        font-size: .9em;
+    }
+
+    .footer_heading {
+        color: white;
+        font-weight: 600;
+        font-size: 1em;
+
+    }
+
+    .footer_item {
+        font-weight: 100;
+        color: white;
+        font-size: .8em;
+    }
+
+
+    footer ul li {
+        margin: 1em 0;
+        font-size: .8em;
+    }
+
 }
 
 /* Tablettes */
