--- a/assets/style/inscription.css
+++ b/assets/style/inscription.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -7,15 +10,10 @@
     text-decoration: none;
     list-style: none;
     text-decoration: none;
-
     font-weight: 400;
     font-style: normal;
+    font-family: 'inter', sans-serif;
 }
-
-
-
-
-
 
 
 
