--- a/assets/style/contact.css
+++ b/assets/style/contact.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -6,7 +8,6 @@
     text-decoration: none;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
 * {
@@ -266,7 +267,7 @@ input[type=email] {
     width: 90%;
     height: 600px;
     background-color: #e66a00;
-    background-image: url(/assets/image/newmap.PNG);
+    background-image: url(/assets/image/newmap.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0 1em 0 4.5em;
